Bug 235966 nsMenuBarListener.cpp opens the menu on Ctrl+Alt+T patch by trev@gtchat.de r=varga sr=bryner