layout/xul/base/src/nsMenuBarListener.h
@@ -85,10 +85,13 @@ public:
 protected:
   static void InitAccessKey();
 
+  PRUint32 GetModifiers(nsIDOMKeyEvent* event);
+
   nsMenuBarFrame* mMenuBarFrame; // The menu bar object.
   PRBool mAccessKeyDown;         // Whether or not the ALT key is currently down.
   static PRBool mAccessKeyFocuses; // Does the access key by itself focus the menubar?
   static PRInt32 mAccessKey;     // See nsIDOMKeyEvent.h for sample values
+  static PRUint32 mAccessKeyMask;// Modifier mask for the access key
 };
 
 
